[package]
name = "lemond"
version = "0.1.0"
authors = ["Dan <dan@yellowiki.xyz>"]
edition = "2018"

[lib]
name = "lemond"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
psutil = "3.1.0"
flume = "0.10.2"
libc = "0.2.77"
ctrlc = { version = "3.1.7", features = ["termination"] }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.64"
crossbeam = "0.8"
signal-hook = "0.3.6"
color-eyre = "0.5.11"
memmap = "0.7.0"
cancellable-timer = "0.1.0"
num_cpus = "1.13.1"
syscalls = "0.6.7"

[build-dependencies]
cc = "1.0.69"

[profile.release]
debug = 1
