[package]
name = "lemond"
version = "0.1.0"
authors = ["Dan <dan@yellowiki.xyz>"]
edition = "2018"

[lib]
name = "lemond"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = { version = "0.2.77", features = ["extra_traits"] }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.64"
signal-hook = "0.3.6"
color-eyre = "0.5.11"
memmap = "0.7.0"
cancellable-timer = "0.1.0"
num_cpus = "1.13.1"
syscalls = "0.6.7"
once_cell = "1.17.1"
rustix = { version = "0.38.32", features = ["process", "event", "fs"] }
nix = { version = "0.28.0", features = ["ptrace"] }
chrono = "0.4.38"
tikv-jemallocator = { version = "0.5.4", features = ["profiling"] }
rand = "0.8.5"
rayon = "1.10.0"
tikv-jemalloc-ctl = "0.5.4"
neli = "0.6.4"

[build-dependencies]
cc = "1.0.69"

[profile.release]
debug = 2
panic = 'abort'
